tests/NormalTests/paczka1/fuzzy1/99045003.err
Error in line 1: OVjp2pO0m A720 77,81
Error in line 2: OqqRsgZ A720 41,6
Error in line 15: a0xYIu A720 56,0
Error in line 19: Q7if8nAqN S864 45,6
Error in line 11: HCKHRcg9od A139 22,0
Error in line 24: A489 A720 31,5
Error in line 35: OqqRsgZ S86S S3,6
